deploy: 9f3445de8b906b78b142e5cdd4b14e782eb1e727

--- a/404.html
+++ b/404.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>404 Page not found | Hugo Serial Programmer</title>
+  <title>404 Page not found | Chronicles of Amaanullah</title>
   
-  <link rel="stylesheet" href="/hugo-theme-serial-programmer/assets/css/blog.css" />
+  <link rel="stylesheet" href="https://hafzan-technologies.github.io/blog2/assets/css/blog.css" />
   
-  <link rel="stylesheet" href="/hugo-theme-serial-programmer/assets/css/common.css" />
+  <link rel="stylesheet" href="https://hafzan-technologies.github.io/blog2/assets/css/common.css" />
   </head>
   <body>
     <main>
       <header>
-  <a class="site-title" href="/hugo-theme-serial-programmer/">Hugo Serial Programmer</a>
+  <a class="site-title" href="https://hafzan-technologies.github.io/blog2/">Chronicles of Amaanullah</a>
 </header>
 
       <section class="article">
@@ -23,7 +23,7 @@
           </h2>
         </div>
         <div class="content">
-          This page dosen't exists, head back to <a href="/hugo-theme-serial-programmer/">Homepage</a>
+          This page dosen't exists, head back to <a href="https://hafzan-technologies.github.io/blog2/">Homepage</a>
         </div>
       </section>
     </main>
